force-app/main/default/objects/custom_create90__c/custom_create90__c.object-meta.xml
<CustomObject>
    <label>Custom created object90</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects90</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>