force-app/main/default/objects/custom_create90__c/fields/custom_create_90field506__c.field-meta.xml
<CustomField>
    <fullName>custom_create_90field506__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 90field506</label>
    <type>Checkbox</type>
</CustomField>